--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>fantasy.football.cupdraw</groupId>
-    <artifactId>Fantasy Football Cup Draw</artifactId>
+    <groupId>com.conor.impl</groupId>
+    <artifactId>fantasy-football-cup-draw</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
